--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.19.2",
     "mongoose": "^8.4.4",
     "mongoose-sequence": "^6.0.1",
+    "node-cache": "^5.1.2",
     "uuid": "^10.0.0",
     "validator": "^13.12.0"
   }
