--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/mongoose-sequence": "^3.0.11",
+    "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
     "@types/uuid": "^10.0.0",
     "@types/validator": "^13.12.0",
@@ -28,6 +29,7 @@
     "express": "^4.19.2",
     "mongoose": "^8.4.4",
     "mongoose-sequence": "^6.0.1",
+    "morgan": "^1.10.0",
     "node-cache": "^5.1.2",
     "uuid": "^10.0.0",
     "validator": "^13.12.0"
